@@ -162,7 +162,7 @@ val kafkaTestDependencies = Seq(
 lazy val commonSettings = Seq(
   organization := "io.druid",
 
-  javaOptions := Seq("-Xms512m", "-Xmx512m"),
+  javaOptions := Seq("-Xms512m", "-Xmx512m", "-XX:MaxPermSize=256M"),
 
   // Target Java 7
   scalacOptions += "-target:jvm-1.7",
